--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
     - name: Build
-      run: dotnet build ../../src/RabbitVerse.Consuming/RabbitVerse.Consuming.csproj -c Release
+      run: dotnet build src/RabbitVerse.Consuming/RabbitVerse.Consuming.csproj -c Release
     - name: Pack nugets
-      run: dotnet pack ../../src/RabbitVerse.Consuming/RabbitVerse.Consuming.csproj -c Release --no-build --output .
+      run: dotnet pack src/RabbitVerse.Consuming/RabbitVerse.Consuming.csproj -c Release --no-build --output .
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json
