--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,14 @@ jobs:
       uses: actions/checkout@v2
     - name: Setup .NET SDK
       uses: actions/setup-dotnet@v1
+    - name: Determine version from tag
+      id: extract_version
+      run: echo "::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}"
     - name: Build
       run: dotnet build src/RabbitVerse.Consuming/RabbitVerse.Consuming.csproj -c Release
     - name: Pack nugets
       run: dotnet pack src/RabbitVerse.Consuming/RabbitVerse.Consuming.csproj -c Release --no-build --output .
     - name: Push to NuGet
       run: dotnet nuget push "*.nupkg" --api-key ${{secrets.nuget_api_key}} --source https://api.nuget.org/v3/index.json
+      env:
+        NUGET_VERSION: ${{ steps.extract_version.outputs.VERSION }}
